--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
