--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.6",
     "react": "^18.3.1",
